# arcane-blueprint

./: Cargo.toml  README.md  admin_mint.rtm  member-mint.rtm
arcane_main/: Cargo.toml
arcane_main/src/: arcane_main.rs  lib.rs  resource_manager.rs  utils.rs
arcane_main/tests/: lib.rs
arcane_reward_style/: Cargo.toml
arcane_reward_style/src/: lib.rs
arcane_reward_style/tests/: lib.rs
arcane_vault/: Cargo.toml
arcane_vault/src/: lib.rs
arcane_vault/tests/: lib.rs
arcane_vote_style/: Cargo.toml
arcane_vote_style/src/: lib.rs
arcane_vote_style/tests/: lib.rs
manifest/: add_vote_style.rtm  change_proposal_status.rtm  change_role.rtm  create_new_vote.rtm  instantiate_reward.rtm  set_reward.rtm  set_vault.rtm  sign_up.rtm  sim_test.txt  stokenet.txt  vote.rtm  withdraw.rtm
new_arcane_rtm/: call-function.rtm  create-new-vote.rtm  deposit_reward.rtm  redem_reward.rtm  sign_up.rtm  test.rtm  vote.rtm  withdraw.rtm
old_arcane_rtm/: create_vote.rtm  m.rtm  sign_up.rtm  sign_up_admin.rtm  t.rtm  vote.rtm  withdraw.rtm
src/: arcane_badge_manager.rs  arcane_core_data.rs  arcane_main.rs  arcane_member_component.rs  arcane_resource.rs  arcane_reward_vault.rs  arcane_vote.rs  lib.rs  utils.rs
tests/: lib.rs
