[workspace]
resolver = "1"
members = [
    "arcane_main",
    "arcane_vault",
    "arcane_vote_style",
    "arcane_reward_style",
]

[profile.release]
opt-level = 'z'        # Optimize for size.
lto = true             # Enable Link Time Optimization.
codegen-units = 1      # Reduce number of codegen units to increase optimizations.
panic = 'abort'        # Abort on panic.
strip = true           # Strip the symbols.
overflow-checks = true # Panic in the case of an overflow.
